[package]
name = "dhanush"
version = "0.1.0"
edition = "2021"
description = "High-performance HTTP load testing tool with multi-URL groups and weighted request distribution"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["rustls-tls", "gzip", "brotli"] }
hdrhistogram = "7"
indicatif = "0.17"
colored = "2"
humantime = "2"
thiserror = "2"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
byte-unit = "5"
rand = "0.8"
num_cpus = "1"
tokio-util = "0.7"
